# bestagons

./: Cargo.toml  LICENCE  README.md
src/: coordinates.rs  directions.rs  geometry.rs  lib.rs
